@@ -47,34 +47,6 @@ class TestRevidMap(TestCase):
         self.assertEquals("bla", 
                 revidmap.lookup_branch_revnum(42, "mypath", "brainslug"))
 
-    def test_lookup_dist(self):
-        revidmap = RevidMap()
-        revidmap.insert_revid("bla", "mypath", 42, 42, "brainslug", 
-                                    50)
-        self.assertEquals(50,
-                revidmap.lookup_dist_to_origin("bla"))
-
-    def test_lookup_dist_notset(self):
-        revidmap = RevidMap()
-        revidmap.insert_revid("bloe", "someotherpath", 42, 42, "brainslug") 
-        self.assertIs(None,
-                revidmap.lookup_dist_to_origin("bloe"))
-
-    def test_insert_revhistory(self):
-        revidmap = RevidMap()
-        revidmap.insert_revision_history(["bla", "bloe", "blo"])
-        self.assertIs(1,
-                revidmap.lookup_dist_to_origin("bla"))
-        self.assertIs(2,
-                revidmap.lookup_dist_to_origin("bloe"))
-        self.assertIs(3,
-                revidmap.lookup_dist_to_origin("blo"))
-
-    def test_lookup_dist_notfound(self):
-        revidmap = RevidMap()
-        self.assertIs(None,
-                revidmap.lookup_dist_to_origin("blabla"))
-
     def test_lookup_branch_nonexistant(self):
         revidmap = RevidMap()
         self.assertIs(None,
